re-organize SASS code, fix sidebar collapse button rotating

--- a/admin/app/assets/stylesheets/spree/admin/shared/_base.scss
+++ b/admin/app/assets/stylesheets/spree/admin/shared/_base.scss
@@ -379,6 +379,10 @@ small,
   border: 2px dashed $blue !important;
 }
 
+.sort-handle {
+  cursor: grab;
+}
+
 .handle {
   cursor: grab !important;
 }
